--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "@vinoskey524/feedlist-react-native",
+  "version": "1.0.0",
   "module": "main.ts",
   "type": "module",
+  "description": "A highly efficient and high-performance feeds renderer, designed for React Native (Bare and Expo).",
   "exports": {
     "import": {
       "types": "./dist/main.d.ts",
