--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@vinoskey524/feedlist-react-native",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "type": "module",
   "description": "A highly efficient and high-performance feeds renderer, designed for React Native (Bare and Expo).",
-  "main": "./dist/main.mjs",
+  "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
   "exports": {
     "import": {
       "types": "./dist/main.d.ts",
-      "default": "./dist/main.mjs"
+      "default": "./dist/main.js"
     }
   },
   "repository": {
